add resources folder to public

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ app/storage/
 # Laravel 5 & Lumen specific
 public/storage
 public/hot
-
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
 public_html/hot
@@ -21,3 +20,4 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+public/resources
